--- a/index.html
+++ b/index.html
@@ -4,9 +4,50 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <title>Hello Front-End</title>
+  <title>CSS-AirBnb</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <section>
+    <div class="text">
+      <h1>Meet Guidebooks</h1>
+      <h3>Discover hundreds of local spots recommended by Airbnb hosts</h3>
+    </div>
+    <div class="images-container">
+      <div class="container">
+        <h1 class="label">San Francisco</h1>
+        <img src="/img/san-francisco.jpg" alt="San Francisco" />
+      </div>
+      <div class="container">
+        <h1 class="label">New York</h1>
+        <img src="/img/new-york.jpg" alt="New York" />
+      </div>
+      <div class="container">
+        <h1 class="label">London</h1>
+        <img src="/img/london.jpg" alt="London" />
+      </div>
+    </div>
+    <button>See All Guidebooks</button>
+  </section>
+  <section>
+    <div class="text">
+      <h1>Just for the weekend</h1>
+      <h3>Discover new, inspiring places close to home.</h3>
+    </div>
+    <div class="images-container">
+      <div class="container">
+        <h1 class="label">Napa</h1>
+        <img src="/img/napa.jpg" alt="Napa" />
+      </div>
+      <div class="container">
+        <h1 class="label">Sonoma</h1>
+        <img src="/img/sonoma.jpg" alt="Sonoma" />
+      </div>
+      <div class="container">
+        <h1 class="label">San Francisco</h1>
+        <img src="/img/san-francisco-2.jpg" alt="San Francisco" />
+      </div>
+    </div>
+    <button>See All Destinations</button>
+  </section>
 </body>
 </html>
